--- a/src/components/OrganDonation.css
+++ b/src/components/OrganDonation.css
@@ -3,33 +3,31 @@
     padding: 20px;
   }
   
-/* Reset all margins and paddings */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 /* Banner Section */
-.banner {
+.banner-section {
+  position: relative;
+  text-align: center;
+}
+  .banner {
     text-align: center;
     margin-bottom: 30px;
     background-color: transparent;
     padding: 0; /* Remove padding from the banner container */
     width: 100%;
-}
+  }
 
-.banner-image {
+  .banner-image {
     width: 100%;
     height: auto;
     max-height: 200px;
     object-fit: cover;
     display: block;
     border-radius: 8px;
-}
+  }
   
   .banner-section h1 {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
