--- a/src/components/ConsultationServiceCard.css
+++ b/src/components/ConsultationServiceCard.css
@@ -27,6 +27,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+
 .option .icon {
     background-color: #e0e0e0;
     width: 60px;
@@ -44,3 +45,16 @@
     color: #6c757d;
     font-size: 14px;
 }
+
+.icon {
+    width: 50px; /* Adjust size as needed */
+    height: 50px; /* Adjust size as needed */
+    margin-bottom: 10px; /* Add some space below the icon */
+}
+
+.icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image fits within the dimensions */
+}
+
