Mobile view changes

--- a/src/secondary/Header.css
+++ b/src/secondary/Header.css
@@ -90,6 +90,7 @@
 
 .menu-buttons .cart-button {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 8px;
